--- a/app.json
+++ b/app.json
@@ -18,13 +18,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo_m.png",
         "backgroundColor": "#ddd"
-      }
+      },
+      "package": "com.l4rius.appminimarket"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "b1ceaf3f-c558-4a94-908c-3fa8012cb7a4"
+      }
+    }
   }
 }
